--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -46,6 +46,8 @@ jobs:
           distribution: 'zulu'
           java-version: ${{ matrix.java }}
           check-latest: true
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - uses: gradle/actions/setup-gradle@v4
       - name: Test with Gradle
         run: ./gradlew test
@@ -66,6 +68,8 @@ jobs:
           distribution: 'zulu'
           java-version: ${{ matrix.java }}
           check-latest: true
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - uses: gradle/actions/setup-gradle@v4
       - name: Test with Gradle
         run: ./gradlew test
